[gd_scene load_steps=27 format=3 uid="uid://qxnqtyeg4ue0"]

[ext_resource type="Script" uid="uid://37hkap528bb6" path="res://scenes/enemy_character.gd" id="1_p2vio"]
[ext_resource type="Texture2D" uid="uid://b7fa5g7ocxdik" path="res://assets/brett.png" id="2_a650k"]
[ext_resource type="Texture2D" uid="uid://cpgffeu6no6yu" path="res://assets/brett-arm.png" id="3_4vovm"]
[ext_resource type="PackedScene" uid="uid://c8vj3yqnvys4p" path="res://scenes/boring_rifle.tscn" id="4_4vovm"]
[ext_resource type="PackedScene" uid="uid://bqnxqvdmyj5xt" path="res://scenes/cyber_glock.tscn" id="5_xgmuc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a650k"]
atlas = ExtResource("2_a650k")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vovm"]
atlas = ExtResource("2_a650k")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgmuc"]
atlas = ExtResource("2_a650k")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wghmo"]
atlas = ExtResource("2_a650k")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d557m"]
atlas = ExtResource("2_a650k")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhjo6"]
atlas = ExtResource("2_a650k")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h0vy"]
atlas = ExtResource("2_a650k")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj7mf"]
atlas = ExtResource("2_a650k")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vmgx"]
atlas = ExtResource("2_a650k")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6unfe"]
atlas = ExtResource("2_a650k")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxja8"]
atlas = ExtResource("2_a650k")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iadup"]
atlas = ExtResource("2_a650k")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_herhr"]
atlas = ExtResource("2_a650k")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb3ya"]
atlas = ExtResource("2_a650k")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7f3b"]
atlas = ExtResource("2_a650k")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4hvp"]
atlas = ExtResource("2_a650k")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vlw4"]
atlas = ExtResource("2_a650k")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_joi77"]
atlas = ExtResource("2_a650k")
region = Rect2(320, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_wghmo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a650k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vovm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgmuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wghmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d557m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhjo6")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h0vy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj7mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vmgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6unfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxja8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iadup")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_herhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb3ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7f3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4hvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vlw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joi77")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_d557m"]
radius = 6.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a650k"]
radius = 8.0

[node name="EnemyCharacter" type="CharacterBody2D"]
z_index = 1
z_as_relative = false
y_sort_enabled = true
script = ExtResource("1_p2vio")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
z_as_relative = false
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_wghmo")
animation = &"die"
autoplay = "idle"

[node name="ArmSprite2D" type="Sprite2D" parent="AnimatedSprite2D"]
show_behind_parent = true
z_index = 1
z_as_relative = false
position = Vector2(5, 2)
texture = ExtResource("3_4vovm")
offset = Vector2(4.5, 0.5)

[node name="BoringRifle" parent="AnimatedSprite2D/ArmSprite2D" instance=ExtResource("4_4vovm")]
visible = false

[node name="CyberGlock" parent="AnimatedSprite2D/ArmSprite2D" instance=ExtResource("5_xgmuc")]

[node name="MovementCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_d557m")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DamageArea2D" type="Area2D" parent="."]
position = Vector2(0, -4)
collision_layer = 2
collision_mask = 0

[node name="DamageCollisionShape2D2" type="CollisionShape2D" parent="DamageArea2D"]
shape = SubResource("CapsuleShape2D_a650k")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
